dark mode fixes

--- a/src/app/Portfolio/_mobilePortfolio.scss
+++ b/src/app/Portfolio/_mobilePortfolio.scss
@@ -706,7 +706,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 1.15rem 0rem;
-            border-top: 1px solid rgba(229, 229, 230, 0.5);
+            border-top: 1px solid var(--deifSectionalBOrder);
             margin-right: 1.6rem;
 
             .balance-amt {
